=============================================================================
Changelog
=============================================================================
2021-10-07:
- Implemented mappers 082, 136, 143, 147

2021-09-30:
- Added a menubar to the window

2021-09-22:
- Initial release on GitHub

2021-09-21:
- Boxart/screenshot locations can now each contain multiple paths separated
  by semicolon; Zip archives are also supported
- The date/time format displayed when selecting a save slot can now be customized

2021-09-20:
- Files within archives are now extracted straight into memory without using
  temporary files
- If an archive only contains one ROM, automatically open it
- Archives are now colorized in the file browser

2021-09-17:
- Added support for browsing/loading ROMs from within Zip archives
- Added a scrollbar to menus when applicable
- Fixed a memory leak in file browser

2021-09-16:
- Added Favourites; use menu or Shift-F to (un)favourite, Shift-F2 to list
- Menus now colourize favourited ROMs and the currently loaded ROM
- Fixed menu rendering issues with overscan

2021-09-15:
- Toggling CRT/NTSC filters while paused/in menu now displays proper frame
- Fixed incorrect overscan bounds calculations

2021-09-14:
- All GUI colors can now be changed via the configuration file

2021-09-13:
- Improved OSD for savestate slot selection: shows availability and date
- Added OSD opacity and timeout settings
- Added setting to only show pad inputs during movie playback
- Implemented mappers 115, 193, 521

2021-09-10:
- Added setting to autoswitch 50/60 Hz display mode in fullscreen
  (switches to closest match to current desktop resolution)
- Added overscan settings
- Added alignment settings for various On-Screen Display elements
- Implemented mappers 38, 73, 78, 155, 180, 190, 250, 262, 268
- A CaniNES logo is displayed while the window is (re)initializing

2021-09-09:
- Fixed Dendy erroneously running at 60 Hz

2021-09-08:
- Optimized overlay rendering