@@ -11,14 +11,14 @@ CaniNES supported mappers (iNES 1.0)
 | 48| 49| . | . | 52| 53| . |---| 56| 57| 58| 59| 60| 61| 62| . |
 | 64| 65| 66| 67| 68| 69| 70| 71| 72| 73| 74| 75| 76| . | 78| 79|
 | 80| . | 82| 83|===| 85| 86| 87| 88| . | 90| 91| 92| 93| . | 95|
-| . | . |---| . |===|101|===| . | . |105| . | . | . |===|===|111|
+| 96| . |---| . |===|101|===| . | . |105| . | . | . |===|===|111|
 |112|113|114|115| . |117|118|119| . |121|===| . | . | . | . | . |
 | . |===|===|===|132|133| . |===|136|137|138|139| . |141|142|143|
 |144| . | . |147|148|149|150| . |152|153|154|155|156|157|158|159|
 |===|===| . | . | . | . | . | . |168| . | . | . |172|173| . | . |
 | . |177| . | . |180|===|182| . |184|185| . |187| . |189|190|191|
 |192|193|194|195| . | . | . | . | . | . | . | . | . | . |206|207|
-| . |209|210|211| . | . | . | . | . | . | . | . | . | . |222|---|
+| . |209|210|211| . | . | . | . |216| . | . | . | . | . |222|---|
 | . |225|226|227|228|229|230|231|232|233|234|235| . | . | . |===|
 | . |241| . |243| . |245|246|---|===| . |250|===| . | . | . |255|
 -----------------------------------------------------------------
@@ -131,6 +131,7 @@ Full list
 092
 093
 095
+096
 101
 105
 111
@@ -183,6 +184,7 @@ Full list
 209
 210
 211
+216
 222
 225
 226
