@@ -1,8 +1,11 @@
 =============================================================================
 Changelog
 =============================================================================
+2021-10-08:
+- Implemented mappers 96, 216
+
 2021-10-07:
-- Implemented mappers 082, 136, 143, 147
+- Implemented mappers 82, 136, 143, 147
 
 2021-09-30:
 - Added a menubar to the window
